# credit-approval

./: .airflowignore  .coverage  .coverage.DESKTOP-C8ECMF1.37935.XLVFKKSx  .coverage.DESKTOP-C8ECMF1.42625.XqcTlexx  .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini  pytest.ini.bak  requirements.txt  setup.py
.github/workflows/: main.yml
config/: airflow.cfg
dags/: credit_approval_dag.py
notebooks/: 01_credit_risk_eda.ipynb  02_model_prototyping.ipynb
scripts/: setup_s3.sh
src/credit_approval.egg-info/: PKG-INFO  SOURCES.txt
src/data/: make_dataset.py
src/features/: build_features.py
src/models/: train_model.py
tests/: conftest.py
tests/data/: test_make_dataset.py
tests/features/: test_build_features.py
tests/models/: test_train_model.py
