[tool.pytest.ini_options]
# Tell pytest where to find the source code
pythonpath = "."
# Tell pytest which directories to ignore completely
norecursedirs = ".git venv logs .github"

[tool.coverage.run]
# Tell coverage to measure the 'src' directory
source = ["src"]

[tool.coverage.report]
# Tell coverage to ignore any line containing this specific text
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "credit-approval"
version = "0.1"
description = "Credit Risk Model Training"
readme = "README.md"
requires-python = ">=3.8"